src/index.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

.MenuMobile {
    display: flex;
    flex-direction: column;
    align-items: start;
}
  
.menu-itemsMobile {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}
  
#toggleMenuButton {
    display: none;
}
  
@media (max-width: 750px) {
    .menu-itemsMobile {
        display: none;
        flex-direction: column;
    }
  
    #toggleMenuButton {
        display: block;
    }
  
    .menu-itemsMobile.open {
        display: flex;
    }
}  

#menuButton, Menu button {
    font-size: 22px;
    margin: 4px 0;
}

#productVoucher {
    width: 300px;
    text-align: center;
    border: 1px solid #c7c1b9;
    border-radius: 8px;
    padding: 16px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    background-color: #f0e8de
}

#itemButton {
    background-color: #876254;
    color: white;
    border: none;
    cursor: pointer;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
}

#itemButton:hover {
    background-color: #29160F;
    border-color: transparent;
}

.directory-menu {
    position: relative;
    display: inline-block;
}

.directory-name {
    cursor: pointer;
    font-family: 'Georgia', serif;
    color: #e5d5c0;
    font-size: 16px;
    letter-spacing: 1px;
    margin: 0;
    font-weight: bold;
}
  
.page-list {
    display: none;
    position: absolute;
    background-color: white;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
    list-style-type: none;
    padding: 0;
    margin: 0;
  }
  
.page-list li {
    padding: 8px 16px;
}
  
.page-list li a {
    text-decoration: none;
    color: black;
}
  
.page-list li a:hover {
    background-color: #ddd;
}
  
.directory-menu:hover .page-list {
    display: block;
}

.Menu {
    background-color: #2e1a11;
    padding: 10px 0;
    display: flex;
    justify-content: center;
    flex-wrap: wrap; /* Allows wrapping */
    font-family: 'Georgia', serif;
    font-size: 16px;
    color: #e5d5c0;
    letter-spacing: 2px;
}

.Menu button {
    background: none;
    border: none;
    color: inherit;
    font-size: 22px;
    font-family: inherit;
    cursor: pointer;
    padding: 0 2px;
    margin: 0;
    transition: none;
}

.Menu button:hover {
    border: none;
    background: none;
}

.Menu button + button::before,
.Menu button + .directory-menu p::before,
.Menu .directory-menu p + button::before,
.Menu .directory-menu + button::before {
    content: "•";
    color: #e5d5c0;
    padding-right: 10px;
    padding-left: 10px;
}

.line {
    width: 74vw;
    height: 0.3vh;
    background-color: #29160F;
    margin-top: 2vh;
    margin-left: 13vw; 
    margin-bottom: 2vh;
}

.one_image {
    width: 250px;
    height: fit-content;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/* Flexbox container for two images */
.two_images {
    display: flex;
    flex-wrap: wrap;  /* Ensures that images move to the next line if there isn't enough space */
    gap: 10px; /* Optional: Adds space between the images */
    justify-content: center; 
    /* Centers the images horizontally */
    border-radius: 30px !important ;  /* Rounded corners (optional) */
}

.two_images img {
    width: 250px;
    height: fit-content;
    border-radius: 30px !important   /* Rounded corners (optional) */
}

/* Flexbox container for four images */
.four_images {
    display: flex;
    flex-wrap: wrap;  /* Ensures that images move to the next line if there isn't enough space */
    gap: 10px; /* Optional: Adds space between the images */
    justify-content: center; /* Centers the images horizontally */
}

.four_images img {
    width: 250px;
    height: fit-content; /* Keeps the aspect ratio */
}

.ql-align-center {
    text-align: center;
    font-family: Source Serif Pro;

}

.ql-align-right {
    text-align: end;
    font-family: Source Serif Pro;

}


body{
    background-color: #E4D9C7;
    font-family: Source Serif Pro;

}

button{
    font-family: Source Serif Pro;
    color: #29160F;
    font-weight: 600;
    background-color:#fefefe;
    border: 4px solid #fefefe;
    border-radius: 30px;
    padding-left: 12px;
    padding-right: 12px;
    padding-top: 3px;
    padding-bottom: 2px;
    transition: 0.4s;
    font-size: 24px;
    margin-right: 12px;
    margin-top: 24px;
}

button:hover{
    background-color: #29160F; /* New background color on hover */
    color: #fefefe;            /* New text color on hover */
    border-color: #29160F
}

.Setting_buttons{
    margin-top: 20px;

}

#title{
    font-family: Source Serif Pro;

    margin-left: 10%;
    color: #29160F;
    font-size: 6vh;
    margin-top: 5vh;
    margin-bottom: 10px;
}





#Page_Title{
    margin-top: 8px;
    font-style: Source Serif Pro ;
    color: #29160F;
    margin-left: 13vw;
    font-weight: 500;
    background-color:#fefefe;
    border: 0.3vh solid #fefefe;
    border-radius: 1.5vh;
    padding-left: 1vw;
    padding-right: 1vw;
    padding-top: 0.5vh;
    padding-bottom: 0.5vh;
    transition: 0.4s;
    font-size: 3vh;
}

#Page_Title:hover{
    border: 0.3vh solid #29160F;
}


#Path_Input{
    margin-top: 8px;
    color: #29160F;
    margin-left: 13vw;
    font-weight: 500;
    background-color:#fefefe;
    border: 0.3vh solid #fefefe;
    border-radius: 1.5vh;
    padding-left: 1vw;
    padding-right: 1vw;
    padding-top: 0.5vh;
    padding-bottom: 0.5vh;
    transition: 0.4s;
    font-size: 3vh;
}

#Path_Input:hover{
    border: 0.3vh solid #29160F;

}


.Add_buttons{
    margin-top: 5vh;
    margin-left: 13vw;
    width: 74vw;

    justify-content: space-between;
}

#Save_button{
    margin-top: 5vh;
    margin-left: 13vw;
}

#Delete_button{
    margin-top: -2vh;
    margin-left: 13vw;
    margin-bottom: 4vh;

}

#Added_Title{
    margin-left: 13vw;
    font-size: 3.3vh;
    margin-bottom: 2vh;
    margin-top: 0;
    font-style: bold;
    font-size: 3.5vh;
    font-weight: 600;
}

#Added_Text{
    margin-left: 13vw;
    width: 74vw;
    margin-bottom: 2vh;
    margin-top: 0;
    font-size: 2vh;
}

#Added_Video{
    margin-left: 13vw;

    margin-top: 0;
}

#Added_Video_vid{
    width: 30vw;
}


#Added_Html{
    margin-left: 13vw;
    width: 74vw;
    margin-bottom: 2vh;
    margin-top: 0;
    font-size: 2vh;
}

input[type="file"]{
    color: #29160F;
    font-weight: 500;
    background-color:#fefefe;
    border: 0.25vh solid #fefefe;
    border-radius: 1vh;
    padding-left: 0.7vw;
    padding-top: 0.4vh;
    padding-bottom: 0.4vh;
    transition: 0.4s;
    font-size: 1.3vh;
    margin-top: 1vh;
    margin-bottom: 2vh;
}

input[type="file"]:hover{
    border: 0.25vh solid #29160F;
}

#Added_menu{
    margin-left: 13vw;
}

#Added_menu_select{
    color: #29160F;
    font-weight: 600;
    background-color:#fefefe;
    border: 0.25vh solid #fefefe;
    border-radius: 1vh;
    padding-left: 0.7vw;
    padding-right: 0.7vw;
    padding-top: 0.4vh;
    padding-bottom: 0.4vh;
    transition: 0.4s;
    font-size: 1.3vh;
    margin-left: 1vw;
    margin-bottom: 2vh;
}

#Added_menu_select:hover{
    border: 0.25vh solid #29160F;
}

#Added_One_Image{
    margin-left: 13vw;
    width: 74vw;
}

#Added_One_Image_img{
width: 20vw;
}



#Added_Two_Images{
    margin-left: 13vw;
    border-radius: 50px;
}

#Added_Two_Images_img_one{
    width: 20vw;
}

#Added_Two_Images_img_two{
    width: 20vw;
    margin-left: 5vw;
    border-radius: 50px;
}

#Added_Two_Images_file_two{
margin-left: 11.3vw;
}

#Added_Four_Images{
    margin-left: 13vw;
}

#Added_Four_Images_img_one{
    width: 20vw;
    
}

#Added_Four_Images_img_two{
    width: 20vw;   
    margin-left: 3vw; 
}

#Added_Four_Images_img_three{
    margin-top: 1vw;
    width: 20vw;    
    margin-left: 0vw;
}

#Added_Four_Images_img_four{
    width: 20vw;    
    margin-left: 3vw;
}

#Added_Four_Images_file_two{
    margin-left: 2vw;
}

#Added_Four_Images_file_three{
    margin-left: 2vw;
}

#Added_Four_Images_file_four{
    margin-left: 2vw;
}

#Added_Formated{
    margin-left: 13vw;
    width: 74vw;
    color:#293241;
    background-color: #fefefe;
    border-radius: 2vh;
    margin-bottom: 2vh;
    border: 0.3vh solid #fefefe; 
    transition: border 0.4s; 
}

#Added_Formated:focus-within {
    border-color: #3d5a80; 
}

.ql-container {
    border: none !important; 
    outline: none;  

}


.ql-editor {
    border: none;
    outline: none; 
    font-family: Source Serif Pro; 
    font-size: 2vh; 
    color: #293241; 
    font-weight: 400;

}

/* Optional: Remove focus outline when clicking inside the editor */
.ql-editor:focus {
    border: none;
    outline: none !important;  /* Remove default outline */
}

/* Apply border-radius to the toolbar as well */
.ql-toolbar {
    border: none;  /* Remove any border around toolbar */
    outline:none;
}

.ql-toolbar.ql-snow {
border:none;
}

.ql-toolbar button {
    margin: 0;
    padding: 0;
}

#Added_YouTube{
    margin-left: 13vw;

}

#Added_YouTube iframe {

    width: 40vw;
    height: auto;
    aspect-ratio: 16 / 9;
  
  }


#Added_YouTube_link{
    font-family: Source Serif Pro;
    color: #3d5a80;
    font-weight: 500;
    background-color:#fefefe;
    border: 0.25vh solid #fefefe;
    border-radius: 1vh;
    padding-left: 0.7vw;
    padding-top: 0.2vh;
    padding-bottom: 0.2vh;
    transition: 0.4s;
    font-size: 1.3vh;
    margin-top: 1vh;
    margin-bottom: 2vh;
}

#Added_YouTube_link:hover{
    border: 0.25vh solid #3d5a80;
}














@media (max-width: 768px) {
    #Added_Two_Images_file_two{
        margin-top: -1vh;
        margin-left: 0;
    }

    #Added_One_Image_img{
        width: 74vw;
    }

    #Added_Two_Images_img_one{
        width: 35vw;
        border-radius: 50px;
    }
    
    #Added_Two_Images_img_two{
        width: 35vw; 
        margin-left: 2vw;
        border-radius: 100px;
    }

    #Added_Four_Images_img_one{
        width: 35vw;
        
    }
    
    #Added_Four_Images_img_two{
        width: 35vw;   
        margin-left: 4vw;
    }
    
    #Added_Four_Images_img_three{
        width: 35vw;    
        margin-left: 0;
    }
    
    #Added_Four_Images_img_four{
        width: 35vw;    
        margin-left: 4vw;
    }

    #Added_Four_Images_file_two{
        margin-left: 0vw;
    }
    
    #Added_Four_Images_file_three{
        margin-left: 0vw;
    }
    
    #Added_Four_Images_file_four{
        margin-left: 0vw;
    }
    
    #Added_YouTube iframe {

        width: 74vw;

      
      }
    
}

    



.ql-font-arial {
    font-family: Arial, sans-serif;
}
.ql-font-times-new-roman {
    font-family: 'Times New Roman', serif;
}
.ql-font-courier-new {
    font-family: 'Courier New', monospace;
}
.ql-font-verdana {
    font-family: Verdana, sans-serif;
}
.ql-font-georgia {
    font-family: Georgia, serif;
}
.ql-font-trebuchet-ms {
    font-family: 'Trebuchet MS', sans-serif;
}
.ql-font-comic-sans-ms {
    font-family: 'Comic Sans MS', cursive;
}
.ql-font-impact {
    font-family: Impact, sans-serif;
}

#create{
    margin-left: 2vw;
}

#PageStructure{
    margin-left: 2vw;
}

